Add recording storage providers
